File extraction implemented

--- a/ckanext/extractor/theme/templates/extractor/read_core.html
+++ b/ckanext/extractor/theme/templates/extractor/read_core.html
@@ -6,7 +6,7 @@
   <xi:include href="../_util.html" />
 
   <div id="dataset" class="dataset">
-    <h3>Extractor Configuration</h3>
+    <h3>Transformation Configuration</h3>
     <div id="dataset-information">
       <form name="transformation_submission" method="post"
       action="/dataset/extractor/${c.pkg.name}/transformation_submit"
