--- a/ckanext/extractor/theme/templates/extractor/read_core.html
+++ b/ckanext/extractor/theme/templates/extractor/read_core.html
@@ -12,9 +12,9 @@
       action="/dataset/extractor/${c.pkg.name}/transformation_submit"
       enctype="multipart/form-data">
       <py:if test="c.data">      
-        <b>Main Class:</b> <input type="text" name="mainclass" value="${c.mainclass}"/> <br/>
-        <b>Filename:</b> ${c.filename} <br/>
-        <b>Timestamp:</b> ${c.timestamp} <br/>
+        <b>Main class:</b> <input type="text" name="mainclass" value="${c.mainclass}"/> <br/>
+        <b>File name:</b> ${c.filename} <br/>
+        <b>Time stamp:</b> ${c.timestamp} <br/>
         <br/>
       </py:if>
         <input type="file" name="transformation_code" /> <br/>
