--- a/ckanext/extractor/theme/templates/extractor/read_core.html
+++ b/ckanext/extractor/theme/templates/extractor/read_core.html
@@ -23,7 +23,7 @@
         <div class="control-group">
           <label class="control-label">File Name</label>
           <div class="controls">
-            ${c.filename}          
+            <a href="/dataset/extractor/${c.pkg.name}/transformation_download" target="_blank">${c.filename}</a>
           </div>
         </div>
 
