--- a/ckanext/extractor/theme/templates/extractor/read_core.html
+++ b/ckanext/extractor/theme/templates/extractor/read_core.html
@@ -1,17 +1,20 @@
 <html xmlns:py="http://genshi.edgewall.org/"
-  xmlns:xi="http://www.w3.org/2001/XInclude"
-  xmlns:i18n="http://genshi.edgewall.org/i18n"
-  py:strip=""
-  >
-  <xi:include href="../_util.html" />
+xmlns:xi="http://www.w3.org/2001/XInclude"
+xmlns:i18n="http://genshi.edgewall.org/i18n"
+py:strip=""
+>
+<xi:include href="../_util.html" />
 
-  <div id="dataset" class="dataset">
-    <h3>Transformation Configuration</h3>
-    <div id="dataset-information">
-      <form class="form-horizontal" name="transformation_submission" method="post"
-      action="/dataset/extractor/${c.pkg.name}/transformation_submit"
-      enctype="multipart/form-data">
-
+<div id="dataset" class="dataset">
+  <div class="tabbable tabs-left dataset-edit-tabs">
+    <ul class="nav nav-tabs">
+      <!-- One button for each fieldset -->
+      <li class="active"><a data-toggle="tab" href="#transformation-configuration">Transformation Configuration</a></li>
+      <li><a data-toggle="tab" href="#execution-log">Execution Log</a></li>
+      <li><a data-toggle="tab" href="#launch-transformation">Launch Transformation</a></li>
+    </ul>
+    <form class="tab-content form-horizontal" id="dataset-edit" method="post" enctype="multipart/form-data">
+    <fieldset class="tab-pane" id="transformation-configuration">
       <div class="control-group">
         <label class="control-label">Main Class</label>
         <div class="controls">
@@ -47,20 +50,45 @@
 
       <input type="file" name="transformation_code" />
       <div class="form-actions">
-        <input class="btn btn-primary" type="submit" name="submit" value="Submit" />
+        <input class="btn btn-primary" type="submit" name="submit" value="Submit" action="/dataset/extractor/${c.pkg.name}/transformation_submit"/>
         <input id="cancel" class="btn href-action" name="cancel" type="reset" value="Cancel" action="/dataset/${c.pkg.name}" />
       </div>
-    </form>
 
       <py:if test="c.error">
         <b>${c.error_message}</b>
       </py:if>
-    </div>
+    </fieldset>
 
-     <form class="form-horizontal" name="launch_transformation" method="post"
-      action="/dataset/extractor/${c.pkg.name}/transformation_launch">
-      <input class="btn btn-primary" type="submit" name="submit" value="Launch transformation" />
-    </form>
+    <fieldset class="tab-pane" id="execution-log">
+      <py:if test="c.data">
+        <h3>Extractions</h3>
+        <table class="table table-striped table-bordered table-condensed">
+          <tbody>
+            <tr>
+            <th scope="col">Start Date</th><th scope="col">End Date</th><th scope="col">Status (Click to show)</th>
+            </tr>
+            <py:for each="extraction in c.extractions">
+              <tr>
+                <td>${extraction.start_date.strftime("%h %d, %Y, %H:%M:%S")}</td>
+                <td>${extraction.end_date.strftime("%h %d, %Y, %H:%M:%S")}</td>
+                <td><a>${extraction.transformation_status}</a></td>
+              </tr>
+            </py:for>
+          </tbody>
+        </table>
+      </py:if>
+    </fieldset>
+
+    <fieldset class="tab-pane" id="launch-transformation">
+      <py:if test="c.data">
+        <h3>For testing purposes only</h3>
+        <form class="form-horizontal" name="launch_transformation" method="post"
+        action="/dataset/extractor/${c.pkg.name}/transformation_launch">
+          <input class="btn btn-primary" type="submit" name="submit" value="Launch transformation" />
+        </form>
+      </py:if>
+    </fieldset>
+  </form>
   </div>
-
+</div>
 </html>
