--- a/ckanext/extractor/theme/templates/extractor/read_core.html
+++ b/ckanext/extractor/theme/templates/extractor/read_core.html
@@ -18,7 +18,7 @@ py:strip=""
     method="post" enctype="multipart/form-data"
     action="/dataset/extractor/${c.pkg.name}/transformation_submit">
     
-    <fieldset class="tab-pane" id="transformation-deployment">
+    <fieldset class="tab-pane fade in active" id="transformation-deployment">
 
       <div class="control-group">
         <label class="control-label">Crontab</label>
@@ -77,7 +77,7 @@ py:strip=""
       </py:if>
     </fieldset>
 
-    <fieldset class="tab-pane" id="execution-log">
+    <fieldset class="tab-pane fade" id="execution-log">
       <py:if test="c.data">
         <h3>Extractions</h3>
         <table class="table table-striped table-bordered table-condensed">
@@ -100,7 +100,7 @@ py:strip=""
       </py:if>
     </fieldset>
 
-    <fieldset class="tab-pane" id="perform-deploy">
+    <fieldset class="tab-pane fade" id="perform-deploy">
       <py:if test="c.data">
           <p>Re-deployment of transformation will always cause <b>log removal</b>.</p>
           <p><b>Warning!</b> Re-deployment could cause previously extracted data
@@ -111,7 +111,7 @@ py:strip=""
       </py:if>
     </fieldset>
 
-    <fieldset class="tab-pane" id="launch-transformation">
+    <fieldset class="tab-pane fade" id="launch-transformation">
       <py:if test="c.data">
         <h3>For testing purposes only</h3>
           <input class="btn btn-primary href-action" type="button" name="submit" value="Launch transformation" action="/dataset/extractor/${c.pkg.name}/transformation_launch"/>
