--- a/ckanext/extractor/theme/templates/extractor/read.html
+++ b/ckanext/extractor/theme/templates/extractor/read.html
@@ -12,73 +12,13 @@
   py:strip="">
 
   <py:def function="page_title">${c.pkg_dict.get('title', c.pkg_dict['name'])}
-  - Datasets</py:def>
+  - Source Extractor</py:def>
 
   <py:def function="page_heading" property="dc:title">
     ${c.pkg_dict['title']}
   </py:def>
-
-  <py:match path="primarysidebar">
-
-    <li py:if="c.pkg.license_id" id="dataset-license" class="sidebar-section">
-      <strong>License:</strong>
-        <py:choose test="">
-          <span py:when="c.pkg_dict.get('license_url')"><a
-              href="${c.pkg_dict.get('license_url')}" rel="dc:rights">${c.pkg_dict.get('license_title')}</a></span>
-          <span py:when="c.pkg.license" property="dc:rights">${c.pkg_dict.get('license_title')}</span>
-        </py:choose>
-
-        <py:if test="c.pkg_dict.get('isopen')">
-            <a href="http://opendefinition.org/okd/" title="This dataset satisfies the Open Definition.">
-              <img class="open-data" src="http://assets.okfn.org/images/ok_buttons/od_80x15_blue.png" alt="[Open Data]" />
-            </a>
-        </py:if>
-        <py:if test="not c.pkg_dict.get('isopen')">
-            <span class="closed">
-              ${h.icon('lock')}
-            </span>
-        </py:if>
-    </li>
-
-    <li py:if="c.pkg_dict.get('tags')" class="sidebar-section">
-      <h3>Tags</h3>
-      ${tag_list(c.pkg_dict.get('tags', ''))}
-    </li>
-
-    <li py:if="'groups' in c.pkg_dict" class="sidebar-section">
-      <h3>Groups</h3>
-      <ul class="groups">
-        <li py:for="group in sorted(c.pkg_dict.groups, key=lambda g: g['title'] or g['name'])">
-        <a href="${h.url_for(controller='group', action='read', id=group['name'])}">${group.get('title') or group.get('name')}</a>
-        </li>
-      </ul>
-    </li>
-
-    <li py:if="c.package_relationships" class="sidebar-section">
-      <h3>Related Datasets</h3>
-      <ul class="related-datasets">
-        <py:for each="pkg, relationship_str, comment in c.package_relationships">
-          <li>
-            ${h.literal(relationship_str % (h.link_to(pkg.name, h.url_for(controller="package", action="read", id=pkg.name))))}
-            <span py:if="comment is not None and len(comment)" class="relationship_comment">
-                (${comment})
-            </span>
-          </li>
-        </py:for>
-      </ul>
-    </li>
-
-    <!-- <py:if test="not(c.pkg.isopen() and c.pkg.resources)"> -->
-    <!--   <h3 i18n:msg="">This dataset is Not Open</h3>  -->
-    <!--   <p>Either because it is not openly licensed or is missing -->
-    <!--   downloadable resources.</p> -->
-    <!--   <p class="widget_action"> -->
-    <!--     <a href="http://isitopendata.org/enquiry/start/?ckan_dataset=${c.pkg.name}">Start an enquiry on IsItOpenData &raquo;</a> -->
-    <!--   </p> -->
-    <!-- </py:if> -->
-    <!-- </li> -->
-
-  </py:match>
+  
+  <py:def function="body_class">${h.literal('no-sidebar')}</py:def>
 
   <div py:match="content">
     <py:if test="c.pkg_revision_id">
