Input box size and maxlenght reduced

--- a/ckanext/extractor/theme/templates/extractor/read_core.html
+++ b/ckanext/extractor/theme/templates/extractor/read_core.html
@@ -25,15 +25,15 @@ py:strip=""
         <div class="controls">
           <label>
             <span class="extras-label">M</span>
-            <input size="2" name="minute" type="text" class="js-url-input" value="${c.minute}" />
+            <input maxlength="2" name="minute" type="text"  value="${c.minute}" style="width:20px;" />
           </label>
           <label>
             <span class="extras-label">H</span>
-            <input size="2" name="hour" type="text" class="js-url-input" value="${c.hour}" />
+            <input maxlength="2" name="hour" type="text"  value="${c.hour}" style="width:20px;" />
           </label>
           <label>
             <span class="extras-label">D</span>
-            <input size="2" name="day_of_week" type="text" class="js-url-input" value="${c.day_of_week}" />
+            <input maxlength="2" name="day_of_week" type="text" value="${c.day_of_week}" style="width:20px;" />
           </label>
         </div>
       </div>
